[package]
name = "autoref-controller-lib"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
once_cell = "1.18.0"
osu_match_lib = { git = "https://github.com/osu-autoref-bot/osu_match_lib.git" }
tokio = "1"

# Error handling
anyhow = "1"
thiserror = "1"
async-trait = "0.1.68"
